statistics-data-from-base-received